@@ -1,6 +1,7 @@
 FOF 3.4.6
 ================================================================================
 + Classic toolbars now correctly support drop-down menus in Joomla 4
+~ Updated Assertions mixin
 ~ Work towards future PHP 7.4 support
 # [LOW] FEFHelperSelect::booleanlist would not automatically style the radio list for switch display
 
